fixed alignment of description

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -19,3 +19,13 @@
 .btn-info{
   color:white;
 }
+
+
+.btn{
+  a{
+    &:hover{
+      color: black;
+      text-decoration: none;
+    }
+  }
+}
