--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -44,6 +44,10 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+
+  ul{
+    padding-left: 0;
+  }
 }
 
 
